--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,9 @@
 
 /public/assets
 
+# Ignore master key for decrypting credentials and more.
+/config/master.key
+
 /app/assets/builds/*
 !/app/assets/builds/.keep
 
